[package]
name = "core"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
anyhow = "1.0"
base64 = "0.13"
hex = "0.4"
js-sys = "0.3"
num-bigint = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
syn = "1.0"
getrandom = { version = "0.2", features = ["js"] }
thiserror = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_executor = { git = "https://github.com/broxus/ton-labs-executor.git" }
ton_vm = { git = "https://github.com/broxus/ton-labs-vm.git" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
