[package]
name = "debugger"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
anyhow = "1.0"
base64 = "0.13"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git", features = ["venom"] }
ton_executor = { git = "https://github.com/broxus/ton-labs-executor.git" }
ton_vm = { git = "https://github.com/broxus/ton-labs-vm.git" }

shared = { path = "../shared" }
